kubernetes-basics/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  strategy:
    type: Recreate        # old pod is stopped before the new one starts
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      namespace: project
      labels:
        app: todo-app
    spec:
      volumes: # Define volume
        - name: images
          persistentVolumeClaim:
            claimName: images-claim
      containers:
        - name: todo-app
          image: melinadevops/todo-app
          volumeMounts:
            - name: images
              mountPath: /usr/src/app/images
